[tool.poetry]
name = "aco"
version = "0.1.0"
description = "simple package for configuration"
authors = ["Andrew Molotkoff <andrew.molotkoff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
